--- a/Spacex/Spacex/Spacex.csproj
+++ b/Spacex/Spacex/Spacex.csproj
@@ -75,6 +75,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Spacex.cs" />
+    <Compile Include="Stale.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Game.ico" />
