--- a/Spacex/Spacex/Spacex.csproj
+++ b/Spacex/Spacex/Spacex.csproj
@@ -73,8 +73,13 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Menedzer\InputManager.cs" />
+    <Compile Include="Obrazki\kolumny.cs" />
+    <Compile Include="Obrazki\scroll.cs" />
+    <Compile Include="Obrazki\statek.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Program.cs" />
+    <Compile Include="Screens\GameScreen.cs" />
+    <Compile Include="Screens\Screen.cs" />
     <Compile Include="Spacex.cs" />
     <Compile Include="Stale.cs" />
   </ItemGroup>
